--- a/design/design/Views/Home/LedigaObjekt.cshtml
+++ b/design/design/Views/Home/LedigaObjekt.cshtml
@@ -32,48 +32,58 @@
 
         </div>
 
+        <div class=" col-md-2 ">
+            <div class="btnfiltrera btn-group">
+                <button class="btn" type="button" id="filtrera" onclick="hideshowfilt()">
+                    Filtrera
+                    <span class="caret"></span>
+                </button>
+            </div>
+        </div>
+
+
         <div class=" col-md-8 filtreraruta-stor">
             <label>Filtrera</label>
             <div class="row filtreraruta">
-                <div class=" col-md-2 filtrera filtrera-left">
-                    <div class="falt">
+                <div class="col-xs-5 col-md-2 filtrera filtrera-left">
+                    
                         <label>Minst antal rum</label>
                         <div style="width: 60px;">
                             <div class="numberinput">
                                 <input name="state" placeholder="0" class="form-control" type="number">
                             </div>
                         </div>
-                    </div>
+                   
                 </div>
-                <div class=" col-md-2 filtrera">
-                    <div class="falt">
+                <div class="col-xs-5 col-md-2 filtrera">
+                    
                         <label>Max antal rum</label>
                         <div style="width: 60px;">
                             <div class="numberinput">
                                 <input name="state" placeholder="0" class="form-control" type="number">
                             </div>
                         </div>
-                    </div>
+                  
                 </div>
-                <div class=" col-md-2 filtrera">
-                    <div class="falt">
+                <div class="col-xs-12 col-md-2 filtrera">
+                 
                         <label>Maxhyra</label>
                         <div style="width: 80px;">
                             <div class="numberinput">
                                 <input name="state" placeholder="Maxhyra" class="form-control" type="text">
                             </div>
                         </div>
-                    </div>
+                   
                 </div>
                 <div class=" col-md-3 filtrera">
-                    <div class="falt">
+                   
                         <label>Adress</label>
                         <div>
                             <div class="numberinput">
                                 <input name="state" placeholder="Adress" class="form-control" type="text">
                             </div>
                         </div>
-                    </div>
+                 
                 </div>
                 <div class=" col-md-2 filtrera">
                     <div class="falt">
