--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1307,6 +1307,10 @@ p {
 }
 /*Här är för mobilskärm*/
 
+div.rightsort{
+    margin-top: 45px;
+    margin-left: 10px;
+}
 .carousel-caption {
   position: absolute;
   right: 15%;
@@ -1615,11 +1619,7 @@ dd {
       padding-top: 10px;
       box-shadow: 0px 0px 10px #777 
   }
-  /*div.leftdiv{
-    margin-left: 10%;
-    margin-right: 5%;
-    border: 1px solid grey;
-}*/
+
   div.rightdiv{
        /*margin-left: 10%;
     border: 1px solid grey;*/
@@ -1628,6 +1628,7 @@ dd {
  border-bottom: 0px;
   box-shadow: 0px 5px 5px #888888;
   }
+
   .dl-horizontal dd {
     margin-left: 180px;
   }
@@ -2127,6 +2128,10 @@ h6,
 }
   p{
     font-size:12px;
+}
+  div.rightsort{
+    margin-top: 45px;
+    margin-left: 140px;
 }
   p.felanmalan-info{
     text-align:left;
@@ -2920,7 +2925,8 @@ legend {
 label {
   display: inline-block;
   max-width: 100%;
-  margin-bottom: 5px;
+  margin-top:5px;
+  /*margin-bottom: 5px;*/
   font-weight: bold;
 }
 input[type="search"] {
@@ -7180,13 +7186,19 @@ div.checkbox1{
      border: 2px solid #b4b4b4;
      border-radius: 2px;
  }
+
    div.leftdiv{
     margin-left: 10%;
     margin-right: 5%;
     padding-left: 20px;
     /*border: 1px solid grey;*/
 }
-
+      div.leftdiv1{
+    margin-left: 7%;
+   /* margin-right: 5%;
+    padding-left: 20px;*/
+    /*border: 1px solid grey;*/
+}
 
 button.btnleft{
     background-color: #ddd;
@@ -7263,10 +7275,7 @@ div.filtrera-left{
     margin-left: 20px;
 }
 
-div.rightsort{
-    margin-top: 45px;
-    margin-left: 140px;
-}
+
 
 a.btn-information{
     margin-top: 5px;
@@ -7377,9 +7386,14 @@ left: 0;
 width: 100% !important;
 height: 100% !important;
 }
-
 div.information{
    margin-left:30px;
+    margin-right:30px;
+    color:black;
+}
+
+div.information1{
+   /*margin-left:30px;*/
     margin-right:30px;
     color:black;
 }
@@ -7416,12 +7430,6 @@ div.checkbox1{
      background-color: #f5f5f5;
      padding-bottom:10px;
  }
-   div.leftdiv{
-    margin-left: 10%;
-    margin-right: 5%;
-    padding-left: 20px;
-    /*border: 1px solid grey;*/
-}
 
 
 button.btnleft{
