--- a/design/design/Views/Home/LedigaObjekt.cshtml
+++ b/design/design/Views/Home/LedigaObjekt.cshtml
@@ -6,7 +6,7 @@
 
     <div class="row ontop">
 
-        <div class=" col-md-2 rightsort">
+        <div class="col-xs-6 col-md-2 rightsort">
             <label>Sortera</label>
             <br />
             <div class="dropdown">
@@ -31,73 +31,133 @@
 
 
         </div>
-
-        <div class=" col-md-2 ">
-            <div class="btnfiltrera btn-group">
-                <button class="btn" type="button" id="filtrera" onclick="hideshowfilt()">
-                    Filtrera
-                    <span class="caret"></span>
-                </button>
-            </div>
-        </div>
-
-
-        <div class=" col-md-8 filtreraruta-stor">
+        <div class="col-xs-4 col-md-9">
             <label>Filtrera</label>
-            <div class="row filtreraruta">
-                <div class="col-xs-5 col-md-2 filtrera filtrera-left">
-                    
+            <div class=" ">
+                <div class="btnfiltrera btn-group">
+                    <button class="btn btn-default" type="button" id="filtrera" onclick="hideshowfilter()">
+                        Sökfilter
+                        <span class="caret"></span>
+                    </button>
+                </div>
+            </div>
+
+            <div class=" filtreraruta-stor" id="filtreraruta-stor">
+
+                <div class="row filtreraruta">
+                    <div class="col-xs-5 col-md-2 filtrera filtrera-left">
+
                         <label>Minst antal rum</label>
                         <div style="width: 60px;">
                             <div class="numberinput">
                                 <input name="state" placeholder="0" class="form-control" type="number">
                             </div>
                         </div>
-                   
-                </div>
-                <div class="col-xs-5 col-md-2 filtrera">
-                    
+
+                    </div>
+                    <div class="col-xs-5 col-md-2 filtrera">
+
                         <label>Max antal rum</label>
                         <div style="width: 60px;">
                             <div class="numberinput">
                                 <input name="state" placeholder="0" class="form-control" type="number">
                             </div>
                         </div>
-                  
-                </div>
-                <div class="col-xs-12 col-md-2 filtrera">
-                 
+
+                    </div>
+                    <div class="col-xs-12 col-md-2 filtrera">
+
                         <label>Maxhyra</label>
                         <div style="width: 80px;">
                             <div class="numberinput">
                                 <input name="state" placeholder="Maxhyra" class="form-control" type="text">
                             </div>
                         </div>
-                   
-                </div>
-                <div class=" col-md-3 filtrera">
-                   
+
+                    </div>
+                    <div class=" col-md-3 filtrera">
+
                         <label>Adress</label>
                         <div>
                             <div class="numberinput">
                                 <input name="state" placeholder="Adress" class="form-control" type="text">
                             </div>
                         </div>
-                 
-                </div>
-                <div class=" col-md-2 filtrera">
-                    <div class="falt">
-                        <label style="color:white;">.</label>
-                        <div>
+
+                    </div>
+                    <div class=" col-md-2 filtrera">
+                        <div class="falt">
+                            <label style="color:white;">.</label>
                             <div>
-                                <button type="submit" class="btn btn-default" style="margin-left:10px;">Filtrera <span class="glyphicon glyphicon-filter"></span></button>
+                                <div>
+                                    <button type="submit" class="btn btn-default" style="margin-left:10px;">Filtrera <span class="glyphicon glyphicon-filter"></span></button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+       
+
         </div>
-    </div>
+     </div>
+    @* Lilla filtreringsrutan som endast ska synas på mobilskärm *@
+  
+
+        <div class="row filtreraruta2" id="filtreraruta-liten">
+            <div class="col-xs-5 filtrera">
+
+                <label>Minst antal rum</label>
+                <div style="width: 60px;">
+                    <div class="numberinput">
+                        <input name="state" placeholder="0" class="form-control" type="number">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-xs-5 filtrera">
+
+                <label>Max antal rum</label>
+                <div style="width: 60px;">
+                    <div class="numberinput">
+                        <input name="state" placeholder="0" class="form-control" type="number">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-xs-12 col-md-2 filtrera">
+
+                <label>Maxhyra</label>
+                <div style="width: 80px;">
+                    <div class="numberinput">
+                        <input name="state" placeholder="Maxhyra" class="form-control" type="text">
+                    </div>
+                </div>
+
+            </div>
+            <div class=" col-xs-10 filtrera">
+
+                <label>Adress</label>
+                <div>
+                    <div class="numberinput">
+                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                    </div>
+                </div>
+
+            </div>
+            <div class=" col-md-2 filtrera">
+                <div class="falt">
+                    
+                    <div>
+                        <div>
+                            <button type="submit" class="btn btn-default filtrerabtn">Filtrera <span class="glyphicon glyphicon-filter"></span></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+  
     <br />
     <br />
 
