lediga objekt klar med ipad

--- a/design/design/Views/Home/LedigaObjekt.cshtml
+++ b/design/design/Views/Home/LedigaObjekt.cshtml
@@ -6,7 +6,7 @@
 
     <div class="row ontop">
 
-        <div class="col-xs-6 col-md-2 rightsort">
+        <div class="col-xs-6 col-md-2 col-sm-3 rightsort" >
             <label>Sortera</label>
             <br />
             <div class="dropdown">
@@ -31,7 +31,7 @@
 
 
         </div>
-        <div class="col-xs-4 col-md-9">
+        <div class="col-xs-4 col-md-9 col-sm-9">
             <label>Filtrera</label>
             <div class=" ">
                 <div class="btnfiltrera btn-group">
@@ -45,7 +45,7 @@
             <div class=" filtreraruta-stor" id="filtreraruta-stor">
 
                 <div class="row filtreraruta">
-                    <div class="col-xs-5 col-md-2 filtrera filtrera-left">
+                    <div class="col-xs-5 col-md-2 col-sm-4 filtrera filtrera-left">
 
                         <label>Minst antal rum</label>
                         <div style="width: 60px;">
@@ -55,7 +55,7 @@
                         </div>
 
                     </div>
-                    <div class="col-xs-5 col-md-2 filtrera">
+                    <div class="col-xs-5 col-md-2 col-sm-4 filtrera" >
 
                         <label>Max antal rum</label>
                         <div style="width: 60px;">
@@ -65,7 +65,7 @@
                         </div>
 
                     </div>
-                    <div class="col-xs-12 col-md-2 filtrera">
+                    <div class="col-xs-12 col-md-2 col-sm-3 filtrera" >
 
                         <label>Maxhyra</label>
                         <div style="width: 80px;">
@@ -75,7 +75,7 @@
                         </div>
 
                     </div>
-                    <div class=" col-md-3 filtrera">
+                    <div class=" col-md-3 col-sm-6 filtrera">
 
                         <label>Adress</label>
                         <div>
@@ -85,7 +85,7 @@
                         </div>
 
                     </div>
-                    <div class=" col-md-2 filtrera">
+                    <div class=" col-md-2 col-sm-4 filtrera" >
                         <div class="falt">
                             <label style="color:white;">.</label>
                             <div>
@@ -186,13 +186,13 @@
 
             </div>
 
-            <div class="col-sm-3 lastdiv">
+            <div class="col-sm-3 lastdiv-ledigt" >
                 <a href="~/Home/Intresseanmalan2" type="submit" class="btn btn-default btn-information1">Intresseanmälan <span class="glyphicon glyphicon-chevron-right"></span></a><br />
                 <a href="~/Home/InfoObjekt" type="submit" class="btn btn-default btn-information">Mer information <span class="glyphicon glyphicon-chevron-right"></span></a>
-</div>
+            </div>
         </div>
         <br />
-        <hr size="1" color="#996633">
+        <hr size="1" style="color:#996633">
         <div class="row ledig">
             <div class="col-sm-4">
                 <center><img class="img-responsive" src="~/Content/Images/salsm%c3%a4stargatan.PNG" alt=""></center>
@@ -214,8 +214,8 @@
                
             </div>
 
-            <div class="col-sm-3 lastdiv">
-            
+            <div class="col-sm-3 lastdiv-ledigt">
+
                 <button type="submit" class="btn btn-default btn-information1">Intresseanmälan <span class="glyphicon glyphicon-chevron-right"></span></button><br />
                 <button type="submit" class="btn btn-default btn-information">Mer information <span class="glyphicon glyphicon-chevron-right"></span></button>
             </div>
@@ -243,10 +243,9 @@
                
             </div>
 
-            <div class="col-sm-3 lastdiv">
+            <div class="col-sm-3 lastdiv-ledigt">
                 <button type="submit" class="btn btn-default btn-information1">Intresseanmälan <span class="glyphicon glyphicon-chevron-right"></span></button><br />
                 <button type="submit" class="btn btn-default btn-information">Mer information <span class="glyphicon glyphicon-chevron-right"></span></button>
-
             </div>
         </div></div>
 
