--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -2177,7 +2177,7 @@ div.filtreraruta-stor{
 }
 
 div.filtrera-left{
-    margin-left: 20px;
+    margin-left: 5px;
 }
   div.rightsort{
     /*margin-top: 45px;*/
@@ -2258,6 +2258,10 @@ button.flikbutton{
 
   div.lastdiv{
       margin-top: 100px;
+  }
+
+  div.lastdiv-ledigt{
+      margin-top:75px;
   }
 
   div.infosvar{
@@ -2450,7 +2454,9 @@ button.flikbutton{
   }
   
   /*Här är för desktop*/
-
+  div.filtrera-left{
+    margin-left: 20px;
+}
 
   div.rightsort{
     /*margin-top: 45px;*/
@@ -2512,7 +2518,9 @@ div.nyhetsarkiv{
  div.lastdiv{
     margin-top: 100px;
 }
- 
+ div.lastdiv-ledigt{
+     margin-top:100px;
+ }
   div.infosvar{
     display: block;
 }
@@ -2701,7 +2709,9 @@ div.nyhetsarkiv{
    div.lastdiv{
     margin-top: 100px;
 }
-   
+   div.lastdiv-ledigt{
+       margin-top:100px;
+   }
   div.infosvar{
     display: block;
 }
