--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                         <div class="col-xs-7 col-md-3 col-sm-3 second">
                             <p>
                                
-                                    <span class="bold">JOHN EKSTRÖMS BYGG AB</span>
+                                    <span class="bold">JOHN EKSTRÖMS BYGG</span>
                                     <br /> Org. nr 556212-0468
                                     <br />Ormestagatan 1B
                                     <br />702 83 Örebro
