fixat med om oss

--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -48,7 +48,25 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img class="img-responsive" src="~/Content/Images/HeaderSmal.png" alt="Bildtext">
+                    <hr size="1" color="#996633">
+                    <div class="col-md-1">
+
+                    </div>
+                    <div class="col-md-2">
+                        <img class="img-responsive" src="~/Content/Images/logo-black-text-height-240px-2x.png" alt="">
+                    </div>
+                    <div class="omekström col-md-8 col-sm-8 col-lg-8">
+                        <br />
+                        <br />
+                        <p>År 2016 fick vi utmärkelsen årets fastighetsägare av City Örebro med följande motivering. </p>
+                        <br />
+                     
+                        <p><b>Årets Fastighetsägare 2016</b><br />
+                           <i> ”Denna fastighetsägare i Örebro hyser en särskild omtanke om samhällets mindre lyckligt lottade. Ett exempel på detta är den nyligen startade byggnationen av Sveriges modernaste kvinnohus som kommer erbjuda boende för våldsutsatta kvinnor och barn i behov av samhällets skydd. Att denna fastighetsägare även erbjuder övergångsbostäder ligger helt i linje med deras filosofi."</i>
+                        </p>
+                    </div>
+                    
+
 
                 </div>
             </div>
