--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -53,7 +53,7 @@
 
                     </div>
                     <div class="col-md-2">
-                        <img class="img-responsive" src="~/Content/Images/logo-black-text-height-240px-2x.png" alt="">
+                        <img class="img-responsive" src="~/Content/Images/logo-black-text-height-240px-2x.png" alt="cityörebro">
                     </div>
                     <div class="omekström col-md-8 col-sm-8 col-lg-8">
                         <br />
