--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -18,7 +18,7 @@
             <div class="col-md-6 col-sm-6 col-lg-6">     
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-lg-4">
-                        <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt=""></center>
+                        <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt="erikrosenbergsväg"></center>
                     </div>
                     <div class="col-md-6">
                         <p>
@@ -38,7 +38,7 @@
                 <hr size="2" color="black">
                 <div class="row">
                     <div class="col-md-4">
-                        <center><img class="img-responsive" src="~/Content/Images/salsmästargatan.PNG" alt=""></center>
+                        <center><img class="img-responsive" src="~/Content/Images/salsmästargatan.PNG" alt="salsmästaregatan"></center>
                     </div>
                     <div class="col-md-6">
                         <p>
@@ -58,7 +58,7 @@
                 <hr size="2" color="black">
                 <div class="row">
                     <div class="col-md-4">
-                        <center><img class="img-responsive" src="~/Content/Images/tärnvägen.PNG" alt=""></center>
+                        <center><img class="img-responsive" src="~/Content/Images/tärnvägen.PNG" alt="tärnvägen"></center>
                     </div>
                     <div class="col-md-6">
                         <p>
