gjort knappar lika långa för lediga objekt

--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -7345,12 +7345,14 @@ div.filtrera-left{
 
 a.btn-information{
     margin-top: 5px;
+    width: 147px;
     
 }
 
 button.btn-information{
     margin-left: 0px;
     margin-top: 5px;
+    width: 147px;
     
 }
 
