--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -44,7 +44,7 @@
             <legend style="color:#e93523">Vi som jobbar på kontoret</legend>
             <div class="row">
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/Stieg.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/Stieg.jpg" alt="Stieg Ekström"></center>
                     <h4>Stieg Ekström</h4>
                     <p>
                         VD<br>
@@ -52,7 +52,7 @@
                     </p>
                 </div>
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/Anna.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/Anna.jpg" alt="Anna Ekström"></center>
                     <h4>Anna Ekström</h4>
                     <p>
                         Hyresinbetalningar<br />
@@ -62,7 +62,7 @@
 </p>
                 </div>
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/Thor Mari.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/Thor Mari.jpg" alt="Mari Ekström Thor"></center>
                     <h4>Mari Ekström Thor</h4>
                     <p>
                         Ekonomichef/Kamrer<br />
@@ -71,7 +71,7 @@
 </p>
                 </div>
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/TungfeltLena02.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/TungfeltLena02.jpg" alt="Lena Ekström Tungfelt"></center>
                     <h4>Lena Ekström Tungfelt</h4>
                     <p>
                         Fastighetsförvaltare<br />
@@ -83,7 +83,7 @@
 
             <div class="row">
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/AnderssonAnnette.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/AnderssonAnnette.jpg" alt="Annette Andersson"></center>
                     <h4>Annette Andersson</h4>
                     <p>
                         Receptionist <br />
@@ -94,7 +94,7 @@
                     <a class="link" href="~/Home/Intresseanmalan">Intresseanmälan >></a>
                 </div>
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/RunellIrene.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/RunellIrene.jpg" alt="Irene Runell"></center>
                     <h4>Irene Runell</h4>
                     <p>
                         Ekonomiassistent<br />
@@ -103,7 +103,7 @@
                     </p>
                 </div>
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/Ottosson-Carina.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/Ottosson-Carina.jpg" alt="Carina Ottosson"></center>
                     <h4>Carina Ottosson</h4>
                     <p>
                         Besiktningsansvarig<br>
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div class="col-sm-3">
-                    <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
+                    <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Adis"></center>
                     <h4>Adis</h4>
                     <p>
                         Ekonomiassistent
@@ -127,64 +127,64 @@
     <legend style ="color:#e93523">Vi som fixar och underhåller</legend>
     <div class="row">
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/Johansson-Patrik.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/Johansson-Patrik.jpg" alt="Patrik Johansson"></center>
             <h4>Patrik Johansson</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/StrandbergMikael.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/StrandbergMikael.jpg" alt="Mikael Strandberg"></center>
             <h4>Mikael Strandberg</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/BergTony.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/BergTony.jpg" alt="Tony Berg"></center>
             <h4>Tony Berg</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/WibergBenny.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/WibergBenny.jpg" alt="Benny Wiberg"></center>
             <h4>Benny Wiberg</h4>
         </div>
     </div>
 
     <div class="row">
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/ErikssonPeder.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/ErikssonPeder.jpg" alt="Peder Eriksson"></center>
             <h4>Peder Eriksson</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/Gustafsson-Jan-Ake.jpg" /></center>
+            <center><img class="img-responsive" src="~/Content/Images/Gustafsson-Jan-Ake.jpg" alt="Jan Åke Gustavsson" /> /></center>
             <h4>Jan-Åke Gustavsson</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/LarsenPeter.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/LarsenPeter.jpg" alt="Peter Larsen"></center>
             <h4>Peter Larsen</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/RunellHans.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/RunellHans.jpg" alt="Hans Rünell"></center>
             <h4>Hans Rünell</h4>
         </div>
     </div>
 
     <div class="row">
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/Akerstrandorjan.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/Akerstrandorjan.jpg" alt="Örjan Åkerstrand"></center>
             <h4>Örjan Åkerstrand</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Richard Gustafsosn"></center>
             <h4>Richard Gustafsson</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/StenArnsheml.png" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/StenArnsheml.png" alt="Sten Arnshelm"></center>
             <h4>Sten Arnsheml</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Mikael Sabri"></center>
             <h4>Mikael Sabri</h4>
         </div>
 
     </div>
     <div class="row">
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt=""></center>
+            <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Britt-Marie Jansson"></center>
             <h4>Britt-Marie Jansson</h4>
         </div>
         
