--- a/design/design/Views/Home/seriorboende.cshtml
+++ b/design/design/Views/Home/seriorboende.cshtml
@@ -21,7 +21,7 @@
                 <div class="col-md-8">
 
 
-                    <center><img class="img-responsive" src="~/Content/Images/Senior.jpeg" alt=""></center><h3>
+                    <center><img class="img-responsive" src="~/Content/Images/Senior.jpeg" alt="Seniorboende"></center><h3>
                         Välkommen till seniorboendet Nära Till!
                     </h3>
 
