--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -11,8 +11,8 @@
         <div class="row ">
 
 
-            <div class=" col-md-8 divfastigheter2">
-                <div class="col-sm-4 divleft2">
+            <div class=" col-md-8 col-sm-6 divfastigheter2" >
+                <div class="col-sm-4 col-md-4 divleft2" >
                     <p>Visa fastigheter för:</p>
                     <div class="dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
@@ -29,7 +29,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-md-4">
                     <p>Sök på adress</p>
 
 
@@ -53,11 +53,11 @@
                 <legend style="color:#e93523">3 Fastigheter</legend>
                 <div class="row divfastigheter3 objekt">
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt=""></center>
                     </div>
-                    <div class="col-md-5">
-                        <br />
+                    <div class="col-md-5 col-sm-5">
+                        
                         <p>
                             <b>Område:</b> Örebro Norr <br />
                             <b>Adress:</b> Rynningegatan 27-37 <br />
@@ -69,25 +69,25 @@
 
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                         <br />
-
-                        <div class="google-maps">
+                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/gvNVpwmYs5n" target="_blank"> Hitta hit</a>
+                        @*<div class="google-maps">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
 
                 <hr size="1" color="#996633">
                 <div class="row objekt">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/Brandstationen 6 - 3.jpg" alt=""></center>
                     </div>
-                    <div class="col-md-5">
-                        <br />
+                    <div class="col-md-5 col-sm-5">
+                        
                         <p>
                             <b>Område:</b> Örebro Centralt <br />
-                            <b>Adress:</b> Badhusgatan 1-3 <br />
+                            <b>Adress:</b> Kyrkogatan 20 <br />
                             <b>Antal lägenheter i fastigheten:</b> 15<br />
                             <br />
                             0 Lediga lägenheter i fastigheten<br />
@@ -95,23 +95,23 @@
                         <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                         <br />
-
-                        <div class="google-maps">
+                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/boNdvNsyb1R2" target="_blank"> Hitta hit</a>
+                        @*<div class="google-maps">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
+                        </div>*@
 
                     </div>
                 </div>
 
                 <hr size="1" color="#996633">
                 <div class="row objekt">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/Blaslampan 2 - 1.jpg" alt=""></center>
                     </div>
-                    <div class="col-md-5">
-                        <br />
+                    <div class="col-md-5 col-sm-5">
+                       
                         <p>
                             <b>Område:</b> Örebro Centralt <br />
                             <b>Adress:</b> Slottsgatan 7 <br />
@@ -122,18 +122,19 @@
                         <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3">
                         <br />
-                        <div class="google-maps">
+                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                        @*<div class="google-maps">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
+                        </div>*@
 
                     </div>
                 </div>
             </div>
-            <div class=" col-md-4 divfastigheter">
+            <div class=" col-md-4 col-sm-3 divfastigheter"  >
 
-                <p><b style="background-color:white;">Läs mer om våra fastigheter</b></p>
+                <p class="meromfastigheter">Läs mer om våra fastigheter</p>
 
                 <div class="link1">
                     <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br />
